--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "../server/app.js",
   "scripts": {
     "start": "nodemon --exec babel-node server/build/app.js",
-    "test": "nyc mocha --require babel-core/register server/test/**.spec.js --exit",
+    "test": "nyc mocha --require babel-core/register server/test/**.spec.js || true --exit",
     "prestart": "npm run lint && npm run build",
     "build": "babel server --out-dir server/build",
     "lint": "eslint server",
